testsuite/single/tests/compiler/fail/no_such_class.lpc
void foo() {
    new(class foo);
}
